# chaquopy-stubs

./: .gitignore  CONTRIBUTING.md  README.md  generator.py  packages-0-base.txt  packages-1-resolved.txt  packages-2-all.txt  pyproject.toml
autogen/chaquopy-stubs-android/35/: README.md  pyproject.toml
autogen/chaquopy-stubs-android/35/src/android/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/accessibilityservice/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/accounts/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/adservices/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/animation/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/app/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/appwidget/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/bluetooth/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/companion/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/content/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/credentials/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/database/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/devicelock/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/graphics/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/hardware/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/inputmethodservice/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/location/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/media/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/mtp/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/net/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/nfc/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/opengl/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/os/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/provider/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/renderscript/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/sax/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/security/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/speech/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/telephony/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/text/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/transition/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/util/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/view/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/webkit/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/widget/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/android/window/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/androidx/annotation/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/dalvik/annotation/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/dalvik/bytecode/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/: chaquopy.pyi
autogen/chaquopy-stubs-android/35/src/java/beans/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/io/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/lang/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/math/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/net/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/nio/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/security/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/sql/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/text/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/time/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/java/util/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/javax/crypto/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/javax/net/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/javax/sql/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/javax/xml/: __init__.pyi
autogen/chaquopy-stubs-android/35/src/org/json/: __init__.pyi
autogen/chaquopy-stubs-android/36/: README.md  pyproject.toml
autogen/chaquopy-stubs-android/36/src/android/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/android/accessibilityservice/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/android/annotation/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/android/app/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/android/appwidget/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/android/bluetooth/: __init__.pyi
autogen/chaquopy-stubs-android/36/src/java/: __init__.pyi
autogen/chaquopy-stubs-androidx-constraintlayout-constraintlayout-core/1.1.1/: README.md  pyproject.toml
autogen/chaquopy-stubs-androidx-emoji2-emoji2-views-helper/1.2.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-androidx-fragment-fragment/1.4.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-androidx-profileinstaller-profileinstaller/1.0.2/: README.md  pyproject.toml
autogen/chaquopy-stubs-androidx-swiperefreshlayout-swiperefreshlayout/1.1.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-androidx-webkit-webkit/1.15.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-com-google-android-material-material/1.13.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-com-google-errorprone-error_prone_annotations/2.44.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-org-jetbrains-kotlin-kotlin-stdlib-jdk8/1.7.0/: README.md  pyproject.toml
autogen/chaquopy-stubs-org-jetbrains-kotlin-kotlin-stdlib-jdk8/1.7.20/: README.md  pyproject.toml
autogen/chaquopy-stubs-org-jetbrains-kotlin-kotlin-stdlib/1.3.60/: README.md  pyproject.toml
autogen/chaquopy-stubs-org-jetbrains-kotlin-kotlin-stdlib/1.3.60/src/kotlin/: __init__.pyi
autogen/chaquopy-stubs-org-osmdroid-osmdroid-android/6.1.20/: README.md  pyproject.toml
template/{{cookiecutter.stub_name}}/: README.md  pyproject.toml
(+4840 files in other folders)
