[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.stub_name }}"
version = "{{ cookiecutter.stub_version }}"
description = "Python type stubs for {{ cookiecutter.readable_name }} generated with chaquopy-stubgen"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Typing :: Stubs Only",
    "Programming Language :: Python :: 3",
    "Operating System :: Android",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
