[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaquopy-stubs-androidx-swiperefreshlayout-swiperefreshlayout"
version = "1.1.0.20260226"
description = "Python type stubs for androidx.swiperefreshlayout:swiperefreshlayout generated with chaquopy-stubgen"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Typing :: Stubs Only",
    "Programming Language :: Python :: 3",
    "Operating System :: Android",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
