[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaquopy-stubs-androidx-webkit-webkit"
version = "1.15.0.20260225"
description = "Python type stubs for androidx.webkit:webkit generated with chaquopy-stubgen"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Typing :: Stubs Only",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
