[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaquopy-stubs-com-google-android-material-material"
version = "1.13.0.20260225"
description = "Python type stubs for com.google.android.material:material generated with chaquopy-stubgen"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Typing :: Stubs Only",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
